feat(core/gc): enhance documentation with comprehensive GC coverage
- Add detailed G1 GC documentation (Region layout, RSet, SATB, JEP 522)
- Add ZGC documentation (load barriers, colored pointers, generational ZGC)
- Add Shenandoah GC documentation (Brooks Pointer, read barriers)
- Add VM parameters reference (all GC collectors)
- Add tuning guide (GC selection strategies, optimization)
- Add recent changes (JDK 21-26 improvements)
- Enhance index with contributor statistics from git history

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>